--- a/repo/locale/uk/LC_MESSAGES/default.po
+++ b/repo/locale/uk/LC_MESSAGES/default.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ScsvLog 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-07 13:34+0200\n"
-"PO-Revision-Date: 2015-11-07 13:35+0200\n"
+"POT-Creation-Date: 2015-12-21 19:16+0200\n"
+"PO-Revision-Date: 2015-12-21 19:18+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: UK\n"
@@ -18,78 +18,225 @@ msgstr ""
 "X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-#: src/scsvlog/ScsvLog.scala:145
+#: src/scsvlog/ScsvLog.scala:184
 msgid "port"
 msgstr "порт"
 
-#: src/scsvlog/ScsvLog.scala:149
+#: src/scsvlog/ScsvLog.scala:186
+msgid "Show port configuration"
+msgstr "Налаштування порта"
+
+#: src/scsvlog/ScsvLog.scala:189
 msgid "config"
 msgstr "конфіг"
 
-#: src/scsvlog/ScsvLog.scala:153
+#: src/scsvlog/ScsvLog.scala:191
+msgid "Show chart/channels configuration"
+msgstr "Налаштування графіка/каналів"
+
+#: src/scsvlog/ScsvLog.scala:194
 msgid "values"
 msgstr "значення"
 
-#: src/scsvlog/ScsvLog.scala:161
+#: src/scsvlog/ScsvLog.scala:196
+msgid "Show values"
+msgstr "Показати значення"
+
+#: src/scsvlog/ScsvLog.scala:200
+msgid "chart"
+msgstr "графік"
+
+#: src/scsvlog/ScsvLog.scala:202
+msgid "Enable chart"
+msgstr "Запис графіка"
+
+#: src/scsvlog/ScsvLog.scala:204
 msgid "reset"
 msgstr "скид"
 
-#: src/scsvlog/ScsvLog.scala:182
+#: src/scsvlog/ScsvLog.scala:204
+msgid "Clear all data"
+msgstr "Очистити всі дані"
+
+#: src/scsvlog/ScsvLog.scala:206
+msgid "Save chart to PNG"
+msgstr "Записати графік в PNG"
+
+#: src/scsvlog/ScsvLog.scala:211
+msgid "Replace ?"
+msgstr "Замінити ?"
+
+#: src/scsvlog/ScsvLog.scala:211
+msgid "Confirm replace"
+msgstr "Підтвердіть заміну"
+
+#: src/scsvlog/ScsvLog.scala:216
+msgid "Save data to CSV"
+msgstr "Записати дані в CSV"
+
+#: src/scsvlog/ScsvLog.scala:218
+msgid "auto"
+msgstr "авто"
+
+#: src/scsvlog/ScsvLog.scala:220
+msgid "Automatic periodic CSV save"
+msgstr "Автоматичний періодичний запис CSV"
+
+#: src/scsvlog/ScsvLog.scala:228
+msgid "Select current Look&Feel"
+msgstr "Вибрати вигляд"
+
+#: src/scsvlog/ScsvLog.scala:236
+msgid "Select current language"
+msgstr "Вибрати мову"
+
+#: src/scsvlog/ScsvLog.scala:240
 msgid "connect"
 msgstr "підключення"
 
-#: src/scsvlog/ScsvLog.scala:202
+#: src/scsvlog/ScsvLog.scala:265
+msgid "Connect to port"
+msgstr "Підключитись до порта"
+
+#: src/scsvlog/ScsvLog.scala:266
 msgid "disconnect"
 msgstr "відключення"
 
-#: src/scsvlog/ScsvLog.scala:213
+#: src/scsvlog/ScsvLog.scala:275
+msgid "Disconnect from port"
+msgstr "Відключитись від порта"
+
+#: src/scsvlog/ScsvLog.scala:279
 msgid "Port"
 msgstr "Порт"
 
-#: src/scsvlog/ScsvLog.scala:215
-msgid " port:"
-msgstr " порт:"
+#: src/scsvlog/ScsvLog.scala:290
+msgid "Select channel"
+msgstr "Вибрати канал"
 
-#: src/scsvlog/ScsvLog.scala:247
+#: src/scsvlog/ScsvLog.scala:303
+msgid "Socket IP address and port"
+msgstr "IP адреса і порт"
+
+#: src/scsvlog/ScsvLog.scala:306
+msgid " baud:"
+msgstr " швидкість:"
+
+#: src/scsvlog/ScsvLog.scala:314
+msgid "Serial port baud rate"
+msgstr "Швидкість посл.порта"
+
+#: src/scsvlog/ScsvLog.scala:316
 msgid " bits:"
 msgstr " біти:"
 
-#: src/scsvlog/ScsvLog.scala:255
+#: src/scsvlog/ScsvLog.scala:323
+msgid "Serial port data bits"
+msgstr "Біти даних посл.порта"
+
+#: src/scsvlog/ScsvLog.scala:325
 msgid " parity:"
 msgstr " парність:"
 
-#: src/scsvlog/ScsvLog.scala:263
+#: src/scsvlog/ScsvLog.scala:332
+msgid "Serial port parity"
+msgstr "Парність посл.порта"
+
+#: src/scsvlog/ScsvLog.scala:334
 msgid " stops:"
 msgstr " стопи:"
 
-#: src/scsvlog/ScsvLog.scala:290
+#: src/scsvlog/ScsvLog.scala:341
+msgid "Serial port stop bits"
+msgstr "Стоп-біти посл.порта"
+
+#: src/scsvlog/ScsvLog.scala:355
+msgid "X axis label"
+msgstr "Мітка по осі X"
+
+#: src/scsvlog/ScsvLog.scala:358
+msgid "line №"
+msgstr "№ стрічки"
+
+#: src/scsvlog/ScsvLog.scala:358
+msgid "1st col"
+msgstr "1ша колонка"
+
+#: src/scsvlog/ScsvLog.scala:358
+msgid "date"
+msgstr "дата"
+
+#: src/scsvlog/ScsvLog.scala:366
+msgid "X axis type"
+msgstr "Тип осі X"
+
+#: src/scsvlog/ScsvLog.scala:374
+msgid "X date/time format"
+msgstr "Формат дати/часу по осі X"
+
+#: src/scsvlog/ScsvLog.scala:376
 msgid " limit: "
 msgstr " ліміт: "
 
-#: src/scsvlog/ScsvLog.scala:308
+#: src/scsvlog/ScsvLog.scala:385
+msgid "Limit number of points"
+msgstr "Обмежити кількість точок"
+
+#: src/scsvlog/ScsvLog.scala:387
+msgid " skip: "
+msgstr " пропуск: "
+
+#: src/scsvlog/ScsvLog.scala:395
+msgid "Skip CSV lines"
+msgstr "Пропуск стрічок CSV"
+
+#: src/scsvlog/ScsvLog.scala:403
+msgid "Y axis label"
+msgstr "Мітка по осі Y"
+
+#: src/scsvlog/ScsvLog.scala:406
 msgid "window"
 msgstr "вікно"
 
-#: src/scsvlog/ScsvLog.scala:346
+#: src/scsvlog/ScsvLog.scala:414
+msgid "X window minimum"
+msgstr "Мінімум вікна по осі X"
+
+#: src/scsvlog/ScsvLog.scala:423
+msgid "X window maximum"
+msgstr "Максимум вікна по осі X"
+
+#: src/scsvlog/ScsvLog.scala:432
+msgid "Y window minimum"
+msgstr "Мінімум вікна по осі Y"
+
+#: src/scsvlog/ScsvLog.scala:441
+msgid "Y window maximum"
+msgstr "Максимум вікна по осі Y"
+
+#: src/scsvlog/ScsvLog.scala:448
 msgid "show"
 msgstr "видимість"
 
-#: src/scsvlog/ScsvLog.scala:354
+#: src/scsvlog/ScsvLog.scala:456
 msgid "name"
 msgstr "ім\"я"
 
-#: src/scsvlog/ScsvLog.scala:361
+#: src/scsvlog/ScsvLog.scala:463
 msgid "color"
 msgstr "колір"
 
-#: src/scsvlog/ScsvLog.scala:368
+#: src/scsvlog/ScsvLog.scala:470
 msgid "width"
 msgstr "товщина"
 
-#: src/scsvlog/ScsvLog.scala:377
+#: src/scsvlog/ScsvLog.scala:479
 msgid "style"
 msgstr "стиль"
 
-#: src/scsvlog/ScsvLog.scala:389
+#: src/scsvlog/ScsvLog.scala:500
 msgid "Config"
 msgstr "Конфіг"
+
+#~ msgid " port:"
+#~ msgstr " порт:"
